Resolves: fdo#58324 keep both halves of surrogate pairs if glyph isn't found

Change-Id: I8fda443bb224a7a99b992611221a65e9869da8b9